@@ -1,0 +1,12 @@
+# Blender MTL File: 'campfire.blend'
+# Material Count: 1
+
+newmtl Logs-Stone
+Ns 96.078431
+Ka 0.000000 0.000000 0.000000
+Kd 0.640000 0.640000 0.640000
+Ks 0.000000 0.000000 0.000000
+Ni 1.000000
+d 0.000000
+illum 1
+map_Kd /home/nathan/.minetest/mods/more_fire/textures/more_fire_campfire_logs.png
