@@ -1,0 +1,451 @@
+# Blender v2.71 (sub 6) OBJ File: 'campfire.blend'
+# www.blender.org
+mtllib more_fire_kindling_contained.mtl
+o Contained_Fire_Cube.000
+v 0.109850 -0.357143 0.305314
+v 0.109850 -0.248233 0.283371
+v -0.001248 -0.248233 0.283371
+v -0.001248 -0.357143 0.305314
+v 0.109850 -0.496446 -0.364085
+v 0.109850 -0.387536 -0.386027
+v -0.001248 -0.387536 -0.386027
+v -0.001248 -0.496446 -0.364085
+v -0.334643 -0.485504 0.341245
+v -0.334643 -0.374406 0.341245
+v -0.353935 -0.374406 0.231834
+v -0.353935 -0.485504 0.231834
+v 0.359953 -0.485504 0.218768
+v 0.359953 -0.374406 0.218768
+v 0.340661 -0.374406 0.109358
+v 0.340661 -0.485504 0.109358
+v 0.018164 -0.357143 0.301082
+v 0.011785 -0.248233 0.280088
+v -0.094515 -0.248233 0.312387
+v -0.088135 -0.357143 0.333382
+v -0.182852 -0.496446 -0.360470
+v -0.189231 -0.387536 -0.381465
+v -0.295531 -0.387536 -0.349165
+v -0.289151 -0.496446 -0.328171
+v 0.189974 -0.355916 0.191649
+v 0.189974 -0.302392 0.170182
+v 0.133356 -0.306469 0.160018
+v 0.133356 -0.359992 0.181485
+v 0.259497 -0.489722 -0.141961
+v 0.259497 -0.436199 -0.163429
+v 0.202879 -0.440275 -0.173592
+v 0.202879 -0.493798 -0.152125
+v -0.333520 -0.486619 0.041843
+v -0.333494 -0.428951 0.041848
+v -0.313267 -0.428956 -0.012156
+v -0.313293 -0.486624 -0.012161
+v 0.009327 -0.486782 0.170255
+v 0.009353 -0.429115 0.170259
+v 0.029580 -0.429120 0.116255
+v 0.029554 -0.486787 0.116251
+v -0.202316 -0.326105 -0.084912
+v -0.202294 -0.269280 -0.094738
+v -0.224779 -0.278320 -0.147066
+v -0.224801 -0.335144 -0.137240
+v 0.134814 -0.350553 -0.225553
+v 0.134835 -0.293728 -0.235379
+v 0.112350 -0.302768 -0.287707
+v 0.112328 -0.359592 -0.277881
+v 0.153727 -0.495469 0.450886
+v 0.130774 -0.495469 0.303732
+v 0.277929 -0.495469 0.280779
+v 0.300881 -0.495469 0.427933
+v 0.153727 -0.389072 0.450886
+v 0.130774 -0.389072 0.303732
+v 0.277929 -0.389072 0.280779
+v 0.300881 -0.389072 0.427933
+v -0.416606 -0.495469 -0.045338
+v -0.416606 -0.495469 -0.194272
+v -0.267672 -0.495469 -0.194272
+v -0.267672 -0.495469 -0.045338
+v -0.416606 -0.395652 -0.045338
+v -0.416606 -0.395652 -0.194272
+v -0.267672 -0.395652 -0.194272
+v -0.267672 -0.395652 -0.045338
+v -0.378793 -0.495469 0.237564
+v -0.480454 -0.495469 0.128724
+v -0.371615 -0.495469 0.027062
+v -0.269953 -0.495469 0.135902
+v -0.378793 -0.365755 0.237564
+v -0.480454 -0.365755 0.128724
+v -0.371615 -0.365755 0.027062
+v -0.269953 -0.365755 0.135902
+v -0.134183 -0.495469 -0.320969
+v -0.194093 -0.495469 -0.417106
+v -0.090445 -0.495469 -0.465129
+v -0.030535 -0.495469 -0.368992
+v -0.134183 -0.346536 -0.320969
+v -0.194093 -0.346536 -0.417106
+v -0.090445 -0.346536 -0.465129
+v -0.030535 -0.346536 -0.368992
+v 0.175251 -0.495469 -0.228071
+v 0.133971 -0.495469 -0.371169
+v 0.277070 -0.495469 -0.412449
+v 0.318350 -0.495469 -0.269350
+v 0.175251 -0.380117 -0.228071
+v 0.133971 -0.380117 -0.371169
+v 0.277070 -0.380117 -0.412449
+v 0.318350 -0.380117 -0.269350
+v 0.251956 -0.495469 0.058110
+v 0.281764 -0.495469 -0.087810
+v 0.427684 -0.495469 -0.058002
+v 0.397876 -0.495469 0.087918
+v 0.251956 -0.422654 0.058110
+v 0.281764 -0.422654 -0.087810
+v 0.427684 -0.422654 -0.058002
+v 0.397876 -0.422654 0.087918
+v -0.232717 -0.495469 0.492217
+v -0.255669 -0.495469 0.345062
+v -0.108515 -0.495469 0.322110
+v -0.085563 -0.495469 0.469264
+v -0.232717 -0.382356 0.492217
+v -0.255669 -0.382356 0.345062
+v -0.108515 -0.382356 0.322110
+v -0.085563 -0.382356 0.469264
+v -0.033985 -0.495469 0.350689
+v 0.113554 -0.495469 0.371024
+v 0.101929 -0.495469 0.455372
+v -0.045610 -0.495469 0.435037
+v -0.033985 -0.346536 0.350689
+v 0.113554 -0.346536 0.371024
+v 0.101929 -0.346536 0.455372
+v -0.045610 -0.346536 0.435037
+v 0.339073 -0.495469 0.300291
+v 0.404643 -0.495469 0.166568
+v 0.481092 -0.495469 0.204054
+v 0.415522 -0.495469 0.337777
+v 0.339073 -0.409221 0.300291
+v 0.404643 -0.409221 0.166568
+v 0.481092 -0.409221 0.204054
+v 0.415522 -0.409221 0.337777
+v -0.359990 -0.495469 0.467998
+v -0.461166 -0.495469 0.358706
+v -0.398683 -0.495469 0.300864
+v -0.297508 -0.495469 0.410156
+v -0.359990 -0.409788 0.467998
+v -0.461166 -0.409788 0.358706
+v -0.398683 -0.409788 0.300864
+v -0.297508 -0.409788 0.410156
+v -0.413457 -0.495469 -0.313766
+v -0.368533 -0.495469 -0.455763
+v -0.287353 -0.495469 -0.430081
+v -0.332277 -0.495469 -0.288084
+v -0.413457 -0.409221 -0.313766
+v -0.368533 -0.409221 -0.455763
+v -0.287353 -0.409221 -0.430081
+v -0.332277 -0.409221 -0.288084
+v 0.037431 -0.495469 -0.491183
+v 0.185487 -0.495469 -0.475036
+v 0.176256 -0.495469 -0.390393
+v 0.028200 -0.495469 -0.406539
+v 0.037431 -0.398994 -0.491183
+v 0.185487 -0.398994 -0.475036
+v 0.176256 -0.398994 -0.390393
+v 0.028200 -0.398994 -0.406539
+vt 0.343750 0.203125
+vt 0.156250 0.203125
+vt 0.156250 0.406250
+vt 0.343750 0.406250
+vt 0.015625 0.453125
+vt 1.000000 0.453125
+vt 1.000000 0.250000
+vt 0.015625 0.250000
+vt 0.015625 0.328125
+vt 1.000000 0.328125
+vt 1.000000 0.140625
+vt 0.015625 0.140625
+vt 0.781250 0.250000
+vt 0.578125 0.250000
+vt 0.578125 0.437500
+vt 0.781250 0.437500
+vt 0.015625 0.468750
+vt 1.000000 0.468750
+vt 1.000000 0.265625
+vt 0.015625 0.265625
+vt 0.015625 0.343750
+vt 1.000000 0.343750
+vt 0.921875 0.218750
+vt 0.718750 0.218750
+vt 0.718750 0.421875
+vt 0.921875 0.421875
+vt 0.000000 0.343750
+vt 0.984375 0.343750
+vt 0.984375 0.140625
+vt 0.000000 0.140625
+vt 0.000000 0.312500
+vt 1.000000 0.312500
+vt 1.000000 0.109375
+vt 0.000000 0.109375
+vt 0.828125 0.203125
+vt 0.625000 0.203125
+vt 0.625000 0.406250
+vt 0.828125 0.406250
+vt 0.015625 0.390625
+vt 1.000000 0.390625
+vt 1.000000 0.187500
+vt 0.015625 0.187500
+vt 0.000000 0.296875
+vt 1.000000 0.296875
+vt 1.000000 0.093750
+vt 0.000000 0.093750
+vt 0.343750 0.218750
+vt 0.140625 0.218750
+vt 0.140625 0.406250
+vt 0.002609 0.212891
+vt 0.989254 0.212891
+vt 0.989254 0.012994
+vt 0.002609 0.012994
+vt 0.010050 0.219323
+vt 0.996695 0.219323
+vt 0.996695 0.019426
+vt 0.010050 0.019426
+vt 0.593750 0.234375
+vt 0.406250 0.234375
+vt 0.406250 0.437500
+vt 0.593750 0.437500
+vt 0.010050 0.228781
+vt 0.996695 0.228781
+vt 0.996695 0.028884
+vt 0.010050 0.028884
+vt 0.005089 0.207467
+vt 0.991734 0.207467
+vt 0.991734 0.007570
+vt 0.005089 0.007570
+vt 0.625000 0.187500
+vt 0.421875 0.187500
+vt 0.421875 0.390625
+vt 0.625000 0.390625
+vt 0.796875 0.093750
+vt 0.593750 0.093750
+vt 0.593750 0.296875
+vt 0.796875 0.296875
+vt 0.640625 0.031250
+vt 0.437500 0.031250
+vt 0.437500 0.234375
+vt 0.640625 0.234375
+vt 0.984375 0.031250
+vt 0.781250 0.031250
+vt 0.781250 0.234375
+vt 0.984375 0.234375
+vt 0.687500 0.125000
+vt 0.484375 0.125000
+vt 0.484375 0.328125
+vt 0.687500 0.328125
+vt 0.328125 0.046875
+vt 0.125000 0.046875
+vt 0.125000 0.250000
+vt 0.328125 0.250000
+vt 0.140625 0.781250
+vt 0.250000 0.781250
+vt 0.250000 0.625000
+vt 0.140625 0.625000
+vt 0.453125 0.843750
+vt 0.531250 0.843750
+vt 0.531250 0.718750
+vt 0.453125 0.718750
+vt 0.421875 0.718750
+vt 0.265625 0.718750
+vt 0.265625 0.937500
+vt 0.421875 0.937500
+vt 0.500000 0.609375
+vt 0.500000 1.000000
+vt 0.734375 1.000000
+vt 0.734375 0.609375
+vt 1.000000 0.953125
+vt 1.000000 0.875000
+vt 0.859375 0.875000
+vt 0.859375 0.953125
+vt 0.750000 0.531250
+vt 0.562500 0.531250
+vt 0.562500 0.765625
+vt 0.750000 0.765625
+vt 0.082031 0.968750
+vt 0.136719 0.968750
+vt 0.136719 0.882812
+vt 0.082031 0.882812
+vt 0.781250 0.921875
+vt 0.781250 0.796875
+vt 0.609375 0.796875
+vt 0.609375 0.921875
+vt 0.359375 0.718750
+vt 0.484375 0.718750
+vt 0.484375 0.500000
+vt 0.359375 0.500000
+vt 0.058594 0.882812
+vt 0.058594 0.968750
+vt 0.117188 0.968750
+vt 0.117188 0.882812
+vt 0.023438 0.925781
+vt 0.078125 0.925781
+vt 0.078125 0.839844
+vt 0.023438 0.839844
+vt 0.578125 0.828125
+vt 0.468750 0.828125
+vt 0.468750 1.000000
+vt 0.578125 1.000000
+vt 0.078125 0.750000
+vt 0.234375 0.750000
+vt 0.234375 0.546875
+vt 0.078125 0.546875
+vt 0.750000 0.906250
+vt 0.953125 0.906250
+vt 0.953125 0.546875
+vt 0.750000 0.546875
+vt 0.406250 0.500000
+vt 0.250000 0.500000
+vt 0.250000 0.703125
+vt 0.406250 0.703125
+vt 0.531250 0.890625
+vt 0.718750 0.890625
+vt 0.718750 0.609375
+vt 0.531250 0.609375
+vt 0.125000 1.000000
+vt 0.250000 1.000000
+vt 0.250000 0.828125
+vt 0.125000 0.828125
+vt 0.515625 0.671875
+vt 0.328125 0.671875
+vt 0.328125 0.953125
+vt 0.515625 0.953125
+vt 0.296875 0.984375
+vt 0.484375 0.984375
+vt 0.484375 0.703125
+vt 0.296875 0.703125
+vt 0.500000 0.703125
+vt 0.609375 0.703125
+vt 0.609375 0.500000
+vt 0.500000 0.500000
+vt 0.082031 0.796875
+vt 0.023438 0.796875
+vt 0.023438 0.882812
+vt 0.703125 1.000000
+vt 0.984375 1.000000
+vt 0.984375 0.625000
+vt 0.703125 0.625000
+vt 0.718750 0.687500
+vt 0.843750 0.687500
+vt 0.843750 0.546875
+vt 0.718750 0.546875
+vt 0.042969 0.859375
+vt 0.101562 0.859375
+vt 0.101562 0.773438
+vt 0.042969 0.773438
+vt 0.031250 0.984375
+vt 0.312500 0.984375
+vt 0.312500 0.625000
+vt 0.031250 0.625000
+vt 0.023438 0.968750
+usemtl Logs-Stone
+s off
+f 8/1 5/2 6/3 7/4
+f 2/5 6/6 5/7 1/8
+f 3/9 7/10 6/11 2/12
+f 1/13 4/14 3/15 2/16
+f 1/17 5/18 8/19 4/20
+f 4/21 8/22 7/11 3/12
+f 16/23 13/24 14/25 15/26
+f 10/27 14/28 13/29 9/30
+f 11/31 15/32 14/33 10/34
+f 9/35 12/36 11/37 10/38
+f 9/39 13/40 16/41 12/42
+f 12/43 16/44 15/45 11/46
+f 24/47 21/48 22/49 23/4
+f 18/50 22/51 21/52 17/53
+f 19/54 23/55 22/56 18/57
+f 17/58 20/59 19/60 18/61
+f 17/62 21/63 24/64 20/65
+f 20/66 24/67 23/68 19/69
+f 32/70 29/71 30/72 31/73
+f 26/50 30/51 29/52 25/53
+f 27/54 31/55 30/56 26/57
+f 25/74 28/75 27/76 26/77
+f 25/62 29/63 32/64 28/65
+f 28/66 32/67 31/68 27/69
+f 40/78 37/79 38/80 39/81
+f 34/50 38/51 37/52 33/53
+f 35/54 39/55 38/56 34/57
+f 33/82 36/83 35/84 34/85
+f 33/62 37/63 40/64 36/65
+f 36/66 40/67 39/68 35/69
+f 48/86 45/87 46/88 47/89
+f 42/50 46/51 45/52 41/53
+f 43/54 47/55 46/56 42/57
+f 41/90 44/91 43/92 42/93
+f 41/62 45/63 48/64 44/65
+f 44/66 48/67 47/68 43/69
+f 53/94 49/95 50/96 54/97
+f 54/98 50/99 51/100 55/101
+f 55/102 51/103 52/104 56/105
+f 56/106 52/107 49/108 53/109
+f 49/110 52/111 51/112 50/113
+f 56/114 53/115 54/116 55/117
+f 61/118 57/119 58/120 62/121
+f 62/122 58/123 59/124 63/125
+f 63/126 59/127 60/128 64/129
+f 64/130 60/131 57/132 61/133
+f 57/134 60/135 59/136 58/137
+f 64/138 61/139 62/140 63/141
+f 69/118 65/119 66/120 70/121
+f 70/142 66/143 67/144 71/145
+f 71/146 67/147 68/148 72/149
+f 72/130 68/131 65/132 69/133
+f 65/134 68/135 67/136 66/137
+f 72/150 69/151 70/152 71/153
+f 77/118 73/119 74/120 78/121
+f 78/154 74/155 75/156 79/157
+f 79/158 75/159 76/160 80/161
+f 80/130 76/131 73/132 77/133
+f 73/134 76/135 75/136 74/137
+f 80/162 77/163 78/164 79/165
+f 85/118 81/119 82/120 86/121
+f 86/166 82/167 83/168 87/169
+f 87/170 83/171 84/172 88/173
+f 88/130 84/131 81/132 85/133
+f 81/134 84/135 83/136 82/137
+f 88/174 85/175 86/176 87/121
+f 93/118 89/119 90/120 94/121
+f 94/177 90/178 91/179 95/180
+f 95/181 91/182 92/183 96/184
+f 96/130 92/131 89/132 93/133
+f 89/134 92/135 91/136 90/137
+f 96/174 93/175 94/176 95/121
+f 101/118 97/119 98/120 102/121
+f 102/185 98/186 99/187 103/188
+f 103/189 99/190 100/191 104/192
+f 104/130 100/131 97/132 101/133
+f 97/134 100/135 99/136 98/137
+f 104/174 101/175 102/176 103/121
+f 109/118 105/119 106/120 110/121
+f 110/185 106/186 107/187 111/188
+f 111/193 107/118 108/121 112/176
+f 112/130 108/131 105/132 109/133
+f 105/134 108/135 107/136 106/137
+f 112/174 109/175 110/176 111/121
+f 117/118 113/119 114/120 118/121
+f 118/185 114/186 115/187 119/188
+f 119/193 115/118 116/121 120/176
+f 120/130 116/131 113/132 117/133
+f 113/134 116/135 115/136 114/137
+f 120/174 117/175 118/176 119/121
+f 125/118 121/119 122/120 126/121
+f 126/185 122/186 123/187 127/188
+f 127/193 123/118 124/121 128/176
+f 128/130 124/131 121/132 125/133
+f 121/134 124/135 123/136 122/137
+f 128/174 125/175 126/176 127/121
+f 133/118 129/119 130/120 134/121
+f 134/185 130/186 131/187 135/188
+f 135/193 131/118 132/121 136/176
+f 136/130 132/131 129/132 133/133
+f 129/134 132/135 131/136 130/137
+f 136/174 133/175 134/176 135/121
+f 141/118 137/119 138/120 142/121
+f 142/185 138/186 139/187 143/188
+f 143/193 139/118 140/121 144/176
+f 144/130 140/131 137/132 141/133
+f 137/134 140/135 139/136 138/137
+f 144/174 141/175 142/176 143/121
